--- a/node_setup/nginx/app_name_https.conf
+++ b/node_setup/nginx/app_name_https.conf
@@ -15,6 +15,12 @@ server {
 	include /etc/nginx/default.d/*.conf;
 
 	location / {
+		proxy_pass http://localhost:8081;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
 	}
 
 	error_page 404 /404.html;
