--- a/node_setup/nginx/app_name_https.conf
+++ b/node_setup/nginx/app_name_https.conf
@@ -1,34 +1,49 @@
 server {
 	listen   443 ssl http2 default_server;
 	listen   [::]:443 ssl http2 default_server;
-	server_name  DOMAIN_1 DOMAIN_2;
-	root	 WEB_DIR/APP_NAME;
+	server_name  APP_NAME www.APP_NAME;
+	location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm)$ {
+		root   WEB_DIR/APP_NAME/public;
+		try_files $uri $uri/ index ;
+	}
+	location / {
+		root   WEB_DIR/APP_NAME/public;
+		try_files /html/index.html $uri;
+#		proxy_pass http://127.0.0.1:8081;
+#		proxy_http_version 1.1;
+#	        proxy_redirect     off;
 
+#		proxy_set_header   Upgrade     		$http_upgrade;
+#		proxy_set_header   Connection		'upgrade';
+#		proxy_set_header   Host           	$host;
+#		proxy_set_header   X-Real-IP        $remote_addr;
+#		proxy_cache_bypass $http_upgrade;
+#		proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+#		proxy_max_temp_file_size 0;
+
+#		client_max_body_size       10m;
+#		client_body_buffer_size    128k;
+
+#		proxy_connect_timeout      90;
+#		proxy_send_timeout         90;
+#		proxy_read_timeout         90;
+
+#		proxy_buffer_size          4k;
+#		proxy_buffers              4 32k;
+#		proxy_busy_buffers_size    64k;
+#		proxy_temp_file_write_size 64k;
+	}
 	ssl_certificate "/etc/letsencrypt/live/APP_NAME/fullchain.pem";
 	ssl_certificate_key "/etc/letsencrypt/live/APP_NAME/privkey.pem";
 	ssl_session_cache shared:SSL:1m;
 	ssl_session_timeout  10m;
 	ssl_ciphers HIGH:!aNULL:!MD5;
 	ssl_prefer_server_ciphers on;
-
-	# Load configuration files for the default server block.
-	include /etc/nginx/default.d/*.conf;
-
-	location / {
-		proxy_pass http://localhost:8081;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-	}
-
 	error_page 404 /404.html;
     	location = /40x.html {
 	}
-
 	error_page 500 502 503 504 /50x.html;
     	location = /50x.html {
 	}
+	include /etc/nginx/default.d/*.conf;
 }
-
