--- a/node_setup/nginx/app_name_https.conf
+++ b/node_setup/nginx/app_name_https.conf
@@ -7,7 +7,7 @@ server {
 	listen   80 default_server;
 	listen   [::]:80 default_server;
 	server_name  APP_NAME www.APP_NAME;
-	location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm)$ {
+	location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm|woff|ttf|woff2)$ {
 		root   WEB_DIR/APP_NAME/dist;
 		try_files $uri $uri/ index ;
 	}
@@ -30,7 +30,7 @@ server {
 	listen   443 ssl http2 default_server;
 	listen   [::]:443 ssl http2 default_server;
 	server_name  APP_NAME www.APP_NAME;
-	location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm)$ {
+	location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htmwoff|ttf|woff2)$ {
 		root   WEB_DIR/APP_NAME/dist;
 		try_files $uri $uri/ index ;
 	}
