include serve static files

--- a/node_setup/nginx/app_name_http_standalone.conf
+++ b/node_setup/nginx/app_name_http_standalone.conf
@@ -6,7 +6,7 @@ server {
 
 	# Load configuration files for the default server block.
 	include /etc/nginx/default.d/*.conf;
-
+	include /etc/nginx/includes/serve_static_files.conf;
 	location / {
 	}
 
