--- a/node_setup/nginx/app_name_https.conf
+++ b/node_setup/nginx/app_name_https.conf
@@ -7,19 +7,10 @@ server {
 	listen   80 default_server;
 	listen   [::]:80 default_server;
 	server_name  APP_NAME www.APP_NAME;
+	
 	include /etc/nginx/includes/serve_static_files.conf;
-	location  /  {
-	    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	    	proxy_set_header Host $http_host;
-	    	proxy_set_header X-NginX-Proxy true;
-	    	proxy_http_version 1.1;
-	    	proxy_set_header Upgrade $http_upgrade;
-	    	proxy_set_header Connection "upgrade";
-	    	proxy_max_temp_file_size 0;
-	    	proxy_pass http://APP_NAME_tunnel/;
-	    	proxy_redirect off;
-	    	proxy_read_timeout 240s;
-	}
+	include /etc/nginx/includes/reverse_proxy.conf;
+	
 #	return      301 https://$server_name$request_uri; #https is often blocked, so dont always redirect
 }
 
@@ -27,19 +18,10 @@ server {
 	listen   443 ssl http2 default_server;
 	listen   [::]:443 ssl http2 default_server;
 	server_name  APP_NAME www.APP_NAME;
+	
 	include /etc/nginx/includes/serve_static_files.conf;
-	location  /  {
-	    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	    	proxy_set_header Host $http_host;
-	    	proxy_set_header X-NginX-Proxy true;
-	    	proxy_http_version 1.1;
-	    	proxy_set_header Upgrade $http_upgrade;
-	    	proxy_set_header Connection "upgrade";
-	    	proxy_max_temp_file_size 0;
-	    	proxy_pass http://APP_NAME_tunnel/;
-	    	proxy_redirect off;
-	    	proxy_read_timeout 240s;
-	}
+	include /etc/nginx/includes/reverse_proxy.conf;
+	
 	ssl_certificate "/etc/letsencrypt/live/APP_NAME/fullchain.pem";
 	ssl_certificate_key "/etc/letsencrypt/live/APP_NAME/privkey.pem";
 	ssl_session_cache shared:SSL:1m;
