APP_NAME to DOMAIN_(1|2)

--- a/node_setup/nginx/app_name_https.conf
+++ b/node_setup/nginx/app_name_https.conf
@@ -6,7 +6,7 @@ upstream APP_NAME_tunnel {
 server {
 	listen   80 default_server;
 	listen   [::]:80 default_server;
-	server_name  APP_NAME www.APP_NAME;
+	server_name  DOMAIN_1 DOMAIN_2;
 	
 	include /etc/nginx/includes/serve_static_files.conf;
 	include /etc/nginx/includes/reverse_proxy.conf;
@@ -17,7 +17,7 @@ server {
 server {
 	listen   443 ssl http2 default_server;
 	listen   [::]:443 ssl http2 default_server;
-	server_name  APP_NAME www.APP_NAME;
+	server_name  DOMAIN_1 DOMAIN_2;
 	
 	include /etc/nginx/includes/serve_static_files.conf;
 	include /etc/nginx/includes/reverse_proxy.conf;
